2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* termio.c (display_numeric): Leading sign for binary.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* byteswap.h (COB_BSWAP_32_IA32): Always use bswap.
	(We no longer support i386.)

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* fileio.c (cob_default_error_handle): Set error for status 35.

2004-05-04  Keisuke Nishida  <knishida@open-cobol.org>

	* common.c (cob_runtime_error): Flush buffer at the end.

2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>

	* common.h, common.c (cob_table_sort_init, cob_table_sort_init_key)
	(cob_table_sort): New functions.

2004-04-07  Keisuke Nishida  <knishida@open-cobol.org>

	* strings.c (cob_inspect_converting): Do not convert repeatedly.
	(Thanks to Richard Smith <rich@theforest.plus.com>)

2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* screenio.c: #include <ncurses.h>

2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_close): FILE *fp = f->file;

2004-03-10  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (cob_sort_init): Use temporary sort file.
	(cob_sort_finish): Delete sort file.
	(cob_open): No filename mapping for SORT files.

2004-03-09  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* move.c (cob_binary_set_int, cob_binary_set_int64): Reimplemented.
	(Thanks to Roger While)

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_open): Open files in the text mode for line
	sequential files.

2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>

	* fileio.c (file_open, file_close): Use fcntl for file locking.

2003-10-01  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.h (cob_module): New member `flag_pretty_display'.
	* termio.c (display): Updated.

2003-09-29  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* common.c (cob_is_numeric): Test packed decimal.

2003-08-30  Keisuke Nishida  <kxn30@yahoo.co.jp>
